--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,7 @@ Kildekoden finnes på [GitHub](https://github.com/navikt/ia-datafortelling).
 from data_fetching import query_data
 from data_prepping import prep_data
 
-raw_data = query_data(limit=1000)
+raw_data = query_data()
 data = prep_data(raw_data)
 ```
 
