Add more logging to Quarto

--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,7 @@ title-block-banner-color: white
 date: now
 date-format: "DD.MM.YYYY HH:mm:ss z"
 published-title: "Oppdatert"
+author-title: "Eier"
 author: Team IA
 execute:
     echo: false
