--- a/leverte_ia_tjenester/index.qmd
+++ b/leverte_ia_tjenester/index.qmd
@@ -66,7 +66,7 @@ from plots import plot_unike_bedrifter
 plot_unike_bedrifter(data)
 ```
 
-## Kululativt historgram av unike virksomheter
+## Kumulativt historgram av unike virksomheter
 ```{python}
 from plots import plot_antall_unike_virksomheter_kumulativt
 plot_antall_unike_virksomheter_kumulativt(data)
